Add configurations for Standard

--- a/package.json
+++ b/package.json
@@ -52,5 +52,19 @@
     "testPathIgnorePatterns": [
       "build/"
     ]
+  },
+  "standard": {
+    "ignore": [
+      "node_modules/",
+      "build/"
+    ],
+    "globals": [
+      "describe",
+      "it",
+      "test",
+      "expect",
+      "afterAll",
+      "jest"
+    ]
   }
 }
