--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-popup",
+  "name": "@renemn/create-react-popup",
   "version": "0.0.1",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
